reversion corr for cont/disct

--- a/homework/D40 EDA Data Relationship.ipynb
+++ b/homework/D40 EDA Data Relationship.ipynb
@@ -50,6 +50,7 @@
     "import math\n",
     "import statistics\n",
     "import seaborn as sns\n",
+    "from scipy import stats\n",
     "from IPython.display import display\n",
     "\n",
     "import pingouin as pg\n",
@@ -324,7 +325,20 @@
     "        else:\n",
     "            qual = 'large'\n",
     "    return(qual)\n",
-    "\n"
+    "\n",
+    "def judgment_pearson(c):\n",
+    "    c = abs(c)\n",
+    "    if c < 0.1:\n",
+    "        qual = '無線性相關'\n",
+    "    elif c >= 0.1 and c <= 0.39:\n",
+    "        qual = '低度線性相關'\n",
+    "    elif c >= 0.4 and c <= 0.69:\n",
+    "        qual = '低度線性相關'   \n",
+    "    elif c >= 0.7 and c <= 0.99:\n",
+    "        qual = '高度線性相關'             \n",
+    "    elif c >= 1:\n",
+    "        qual = '完全線性相關'\n",
+    "    return qual"
    ]
   },
   {
@@ -345,24 +359,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cramer's value is 0.6564\n",
-      "large\n"
+      "-0.25408475420305304\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'低度線性相關'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "crosstab, res = researchpy.crosstab(df_train['Age'], df_train['Survived'], test='chi-square')\n",
-    "print(\"Cramer's value is\",res.loc[2,'results'])\n",
-    "contTable = pd.crosstab(df_train['Age'], df_train['Survived'])\n",
-    "df = min(contTable.shape[0], contTable.shape[1]) - 1\n",
-    "print(judgment_CramerV(df,res.loc[2,'results']))"
+    "corr, _=stats.pearsonr(df_train['Age'], df_train['Survived'])\n",
+    "print(corr)\n",
+    "judgment_pearson(corr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 高度相關"
+    "## 低度線性相關"
    ]
   },
   {
@@ -389,9 +410,9 @@
     }
    ],
    "source": [
-    "crosstab, res = researchpy.crosstab(df_train['Sex'], df_train['Survived'], test='chi-square')\n",
+    "crosstab, res = researchpy.crosstab(df_train['Sex'], df_train['Survived_cate'], test='chi-square')\n",
     "print(\"Cramer's value is\",res.loc[2,'results'])\n",
-    "contTable = pd.crosstab(df_train['Sex'], df_train['Survived'])\n",
+    "contTable = pd.crosstab(df_train['Sex'], df_train['Survived_cate'])\n",
     "df = min(contTable.shape[0], contTable.shape[1]) - 1\n",
     "print(judgment_CramerV(df,res.loc[2,'results']))"
    ]
@@ -421,24 +442,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Cramer's value is 0.6938\n",
-      "large\n"
+      "-0.09242385620999947\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'無線性相關'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "crosstab, res = researchpy.crosstab(df_train['Age'], df_train['Fare'], test='chi-square')\n",
-    "print(\"Cramer's value is\",res.loc[2,'results'])\n",
-    "contTable = pd.crosstab(df_train['Sex'], df_train['Survived'])\n",
-    "df = min(contTable.shape[0], contTable.shape[1]) - 1\n",
-    "print(judgment_CramerV(df,res.loc[2,'results']))"
+    "corr, _=stats.pearsonr(df_train['Age'], df_train['Fare'])\n",
+    "print(corr)\n",
+    "judgment_pearson(corr)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 高度相關"
+    "## 無線性相關"
    ]
   }
  ],
